# HextechReady

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  USER_GUIDE.md
src/: app.rs  capture.rs  config.rs  detect.rs  input.rs  lib.rs  logpipe.rs  main.rs
tests/: detect_tests.rs
