[package]
name = "lol-auto-accept-rs"
version = "0.1.0"
edition = "2024"
description = "Rust rewrite of the League of Legends auto accept utility using egui and NCC matching."
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1"
confy = "0.6"
crossbeam-channel = "0.5"
eframe = { version = "0.28", features = ["default_fonts"] }
egui = "0.28"
enigo = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = { version = "0.24", default-features = false }
once_cell = "1.19"
screenshots = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
rstest = "0.21"
